# university

dissertation/: Bibliography.bib  Dissertation.tex
dungeon-of-dooom/: Bot.java  Client.java  GameGUI.java  GameLogic.java  IGameLogic.java  IdentifyResponse.java  Map.java  PlayGame.java  Player.java  README  Server.java  ServerThread.java  ServerUpdate.java
jengar/: CMakeLists.txt  README.md
jengar/android/: settings.gradle
jengar/android/app/: build.gradle
jengar/android/app/src/androidTest/java/com/github/obroomhall/jengar/: ExampleInstrumentedTest.java
jengar/android/app/src/main/: AndroidManifest.xml  jniLibs
jengar/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
jengar/android/app/src/main/java/com/github/obroomhall/jengar/: CameraActivity.java  SettingsActivity.java
jengar/android/app/src/main/res/layout/: activity_camera.xml
jengar/android/app/src/main/res/values/: arrays.xml  strings.xml
jengar/android/app/src/main/res/xml/: root_preferences.xml
jengar/android/app/src/test/java/com/github/obroomhall/jengar/: ExampleUnitTest.java
jengar/android/gradle/wrapper/: gradle-wrapper.properties
jengar/android/openCVLibrary346dev/src/main/: AndroidManifest.xml
jengar/android/openCVLibrary346dev/src/main/java/org/opencv/calib3d/: Calib3d.java
jengar/android/openCVLibrary346dev/src/main/java/org/opencv/core/: Core.java
jengar/android/openCVLibrary346dev/src/main/java/org/opencv/imgcodecs/: Imgcodecs.java
jengar/android/openCVLibrary346dev/src/main/java/org/opencv/imgproc/: Imgproc.java
jengar/android/openCVLibrary346dev/src/main/java/org/opencv/tracking/: Tracking.java
jengar/android/openCVLibrary346dev/src/main/java/org/opencv/videoio/: Videoio.java
jengar/android/openCVLibrary346dev/src/main/java/org/opencv/xfeatures2d/: DAISY.java  FREAK.java
jengar/android/openCVLibrary346dev/src/main/java/org/opencv/ximgproc/: Ximgproc.java
jengar/android/openCVLibrary346dev/src/main/java/org/opencv/xphoto/: Xphoto.java
jengar/client/: CMakeLists.txt
jengar/client/include/jengar/client/: camera.hpp  client.hpp  settings.hpp  system.hpp
jengar/client/src/: camera.cpp  client.cpp  settings.cpp  system.cpp
jengar/client/tools/: test.cpp
jengar/extra/: build.gradle
jengar/extra/app/: build.gradle
jengar/extra/app/src/main/: AndroidManifest.xml
jengar/extra/app/src/main/java/com/example/jengar/: MainActivity.java
jengar/extra/app/src/main/java/com/example/jengar/ui/main/: ArrayHelper.java  Block.java  BuildFragment.java  BuildViewModel.java  PageViewModel.java  PlaceholderFragment.java  SectionsPagerAdapter.java
jengar/extra/app/src/main/java/com/tekle/oss/android/animation/: AnimationFactory.java
jengar/extra/app/src/main/res/drawable-anydpi/: ic_info_icon.xml  ic_rotate_left.xml  ic_rotate_right.xml
jengar/extra/app/src/main/res/layout/: activity_main.xml  build_fragment.xml
jengar/extra/app/src/main/res/values/: dimens.xml  strings.xml
jengar/extra/app/src/test/java/com/example/jengar/ui/main/: BuildViewModelTest.java
jengar/extra/gradle/wrapper/: gradle-wrapper.properties
jengar/server/: CMakeLists.txt
jengar/server/include/jengar/server/: dictionary.hpp  server.hpp
jengar/server/src/: dictionary.cpp  server.cpp
jengar/shared/include/jengar/: network.hpp
jengar/unity/: final_ranks.csv  perturn_1_ranks.csv  perturn_2_ranks.csv  perturn_3_ranks.csv  perturn_4_ranks.csv  perturn_5_ranks.csv  perturn_6_ranks.csv  ranks.csv  singlestack_ranks.csv  smallgame_1_ranks.csv  smallgame_3_ranks.csv  smallgame_4_ranks.csv  tower_ranks.csv
jengar/unity/Assets/: Block.prefab  StandardTower.cs  Wood.physicMaterial  default.unity  disorderly.yml  end.yml  final.yml  game_1.yml  game_2.yml  game_3.yml  map.yml  oneone.yml  perturn_1.yml  perturn_2.yml  perturn_3.yml  perturn_4.yml  perturn_5.yml  perturn_6.yml  singlestack.yml  smallgame_1.yml  smallgame_2.yml  smallgame_3.yml  smallgame_4.yml  tower.yml
jengar/unity/Assets/GoogleARCore/SDK/Materials/: ARBackground.mat
jengar/unity/ProjectSettings/: ProjectSettings.asset
mastermind/: Computer.java  Input.java  InputError.java  MMFiles.java  MMState.java  Mastermind.java  Output.java  PegsException.java  Play.java  README.txt  Setup.java  Terminal.java  numChars.java
opengl/: OpenGLCoursework.cpp  OpenGLCoursework.sln  OpenGLCoursework.vcxproj  README.md  objloader.hpp
relaxation/: .gitignore  (+6 more)
(+64 files in other folders)
